--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -10,7 +10,23 @@
             "מפתח פול-סטאק עם ניסיון בעבודה עם React, Node.js ו-MongoDB. יש לי תשוקה ללמידה ולחקר טכנולוגיות חדשות, ואני תמיד מחפש את הדרך היעילה ביותר לפתור בעיות ולהשיג תוצאות מצוינות. במהלך העיסוק שלי בפיתוח עבדתי על מגוון פרויקטים, כולל פיתוח אתרים בצד הלקוח ובצד השרת.",
             "מעבר לעבודה, אני אוהב לטייל ולהתאמן בחדר כושר. אני מאמין ששילוב של יצירתיות, עבודה קשה והתמדה הוא המפתח להצלחה.",
             "אם אתה מחפש מפתח שעובד בצורה מסודרת, מקצועית, ותמיד שואף לפתרונות יצירתיים – אל תהסס לשלוח לי הודעה!"
-        ]
+        ],
+        "contact": {
+            "h3": "בואו נדבר",
+            "p": [
+                "אם בא לך לדבר, לשאול משהו או לשתף ברעיון – אני כאן. ",
+                "תרגיש/י חופשי/ה לפנות דרך הטופס למטה או במייל, אשמח לשמוע ממך!"
+            ],
+            "name": "שם",
+            "phone": "נייד",
+            "email": "אימייל",
+            "message": "תוכן ההודעה",
+            "submit": "שליחה",
+            "success": {
+                "t": "תודה שפנית אליי! 😊",
+                "b": "קיבלתי את ההודעה שלך ואחזור אליך בקרוב."
+            }
+        }
     },
     "intro": {
         "hi": "היי!",
