--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -26,6 +26,12 @@
                 "t": "תודה שפנית אליי! 😊",
                 "b": "קיבלתי את ההודעה שלך ואחזור אליך בקרוב."
             }
+        },
+        "footer": {
+            "name": "אלי הולצמן",
+            "copyright": "כל הזכויות שמורות ",
+            "location": "תל אביב",
+            "phone": "058-7701440"
         }
     },
     "intro": {
