Add navbar and change styles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,6 +41,11 @@
         "welcome": "Welcome",
         "portfolio": "to my portfolio"
     },
+    "navbar": {
+        "about": "About",
+        "projects": "Projects",
+        "contact": "Contact"
+    },
     "featured": {
         "eventsSite": {
             "title": "Events site",
