--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -54,14 +54,15 @@
         },
         "cardsSite": {
             "title": "אתר כרטיסי ביקור",
-            "desc": "אתר רספונסיבי לכרטיסי ביקור בטכנולוגיית React, כחלק מלימודיי באקריו. כולל יצירה, עריכה וארגון כרטיסים, עם ממשק נוח למשתמש."
+            "desc1": "אתר רספונסיבי לכרטיסי ביקור בטכנולוגיית React, כחלק מלימודיי באקריו. כולל יצירה, עריכה וארגון כרטיסים, עם ממשק נוח למשתמש.",
+            "desc2": "הערה: ה־API בו השתמש הפרויקט כבר אינו פעיל, ולכן האתר החי אינו זמין כרגע."
         },
         "crudApi": {
             "title": "CRUD API",
             "desc": "אפליקציית צד שרת עם Node.js ו־MongoDB לניהול משתמשים וכרטיסים, כולל פעולות CRUD מאובטחות ואימות משתמשים. דגש על מבנה יעיל בצד השרת וטיפול בנתונים."
         },
         "liveSite": "לאתר",
-        "viewCode": "לצפייה בקוד",
+        "viewCode": "צפייה בקוד",
         "download": "הורדה"
     },
     "miniApps": {
