Add download button to miniApps projects

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,8 +68,9 @@
     },
     "miniApps": {
         "buttons": {
+            "liveSite": "Live Site",
             "viewCode": "View Code",
-            "liveSite": "Live Site"
+            "download": "Download"
         },
         "ticTacToe": {
             "title": "Tic Tac Toe",
